communes-1/public/css/style_anjoute-game-1.css
#container {
	position: relative;
	height: 100%;
	background-color: #11151B;
}

.blabla {
	font-size: 14%;
	font-weight: 800;
	margin-top: 8%;
	margin-left: 8%;
	color: #75BE8F;
	font-family: 'Baloo Tamma 2';
}

.blabla .texte {
	width: 60%;
}

.blabla .recompense {
	margin: 8px;
	font-family: 'Lineal', sans-serif;
	font-size: 220%;
}

.bloc-question {
	z-index: 10;
	margin-top: 5vh;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	font-size: 19%;
	
}

.question {
	text-align: center;
	width: 80%;
	background-color: #2978EE;
	border-radius: 10px;
	padding-top: 0.9vh;
	font-family: 'Baloo Tamma 2';
}

.bloc-reponses {
	display: flex;
	width: 90%;
	margin-left: 5%;
	margin-top: 0.5vh;
}

.bloc-reponses .reponse {
	color: #C8A166;
	background-color: #10141A;
	border:  2px solid #C8A166;
	border-radius: 10px;
	width: 40%;
	cursor: pointer;
	margin: 5%;
	z-index: 3;
}

.bloc-reponses .reponse:hover {
	color: black;
	background-color: #C8A166;
}

.bloc-reponses .reponse p {
	font-family: 'Lineal', sans-serif;
	font-size: 150%;
	padding: 1.5vh;
}

.animation_perso {
	position: absolute;
	width: 100%;
	z-index: 0;
	bottom: 8vh;
}

.ville {
	background-color: #10141A;
	width: 100%;
	text-align: center;
	position: absolute;
	top: 90vh;
}

.ville p {
	font-family: 'Lineal', sans-serif;
	color: #C8A166;	
	font-size: 60%;
	border-top: #C8A166 4px solid;
}

